sandc/test/fixtures/astRegression/shouldFail/productions/ifExpression/MissingElse.sand
pub class MissingElse {
    foo() {
        (
            if cond {
                a
            }
        )
    }
}